--- a/2022.11.md
+++ b/2022.11.md
@@ -9,3 +9,4 @@
 |全国大学生数学建模竞赛官网|http://www.mcm.edu.cn/index_cn.html|
 |Matlab赞助通知|http://www.mcm.edu.cn/html_cn/block/c327c6b8ec5800c05545c89a67a8bdbe.html|
 |Campus-Wide License|https://ww2.mathworks.cn/academia/tah-support-program/eligibility.html|
+|Octave|https://octave.org/|
